[gd_scene load_steps=3 format=3 uid="uid://dffd576f5w3ee"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_8cwn3"]
[ext_resource type="PackedScene" uid="uid://5wubws8fy67d" path="res://parallax_layer.tscn" id="2_dudoa"]

[node name="Main" type="Node2D"]
script = ExtResource("1_8cwn3")

[node name="Play" type="Button" parent="."]
offset_left = 503.0
offset_top = 101.0
offset_right = 660.0
offset_bottom = 160.0
text = "Play
"

[node name="Level Editor" type="Button" parent="."]
offset_left = 503.0
offset_top = 185.0
offset_right = 660.0
offset_bottom = 250.0
text = "Level Editor"

[node name="Settings" type="Button" parent="."]
offset_left = 502.0
offset_top = 280.0
offset_right = 657.0
offset_bottom = 343.0
text = "Settings"

[node name="Quit" type="Button" parent="."]
offset_left = 499.0
offset_top = 370.0
offset_right = 660.0
offset_bottom = 426.0
tooltip_text = "Weakness"
text = "Quit
"

[node name="BG" parent="." instance=ExtResource("2_dudoa")]

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Level Editor" to="." method="_on_level_editor_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
